order done + confirmation done

--- a/TP3/confirmation.html
+++ b/TP3/confirmation.html
@@ -6,6 +6,9 @@
   <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <script type="text/javascript" src="./assets/scripts/models/productsmodel.js" defer></script>
+  <script type="text/javascript" src="assets/scripts/controllers/global.js" defer></script>
+  <script type="text/javascript" src="assets/scripts/controllers/confirmation.js" defer></script>
 </head>
 <body>
   <header>
@@ -34,10 +37,7 @@
     </div>
   </header>
   <main>
-    <article>
-      <h1>Votre commande est confirmée Antoine Béland!</h1>
-      <p>Votre numéro de confirmation est le <strong>00001</strong>.</p>
-    </article>
+
   </main>
   <footer>
     <p>Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154</p>
