--- a/TP3/index.html
+++ b/TP3/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>OnlineShop - Accueil</title>
   <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="assets/scripts/controllers/global.js" defer></script>
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
