--- a/TP3/order.html
+++ b/TP3/order.html
@@ -42,7 +42,7 @@
   <main>
     <article>
       <h1>Commande</h1>
-      <form action="./confirmation.html" method="post" id="orderform">
+      <form action="./confirmation.html" method="post" id="order-form">
         <section>
           <h2>Contact</h2>
           <div class="row">
