form fix ta mère ez game ez life

--- a/TP3/order.html
+++ b/TP3/order.html
@@ -79,14 +79,14 @@
           <div class="row">
             <div class="col">
               <div class="form-group">
-                <label for="credit_card">Numéro de carte de crédit</label>
-                <input class="form-control" type="text" id="credit_card" name="credit_card" placeholder="•••• •••• •••• ••••" required>
+                <label for="credit-card">Numéro de carte de crédit</label>
+                <input class="form-control" type="text" id="credit-card" name="creditcard" placeholder="•••• •••• •••• ••••" required>
               </div>
             </div>
             <div class="col">
               <div class="form-group">
-                <label for="credit_card_expiry">Expiration (mm/aa)</label>
-                <input class="form-control" type="text" id="credit_card_expiry" name="credit_card_expiry" placeholder="mm/aa" required>
+                <label for="credit-card-expiry">Expiration (mm/aa)</label>
+                <input class="form-control" type="text" id="credit-card-expiry" name="creditcardexpiry" placeholder="mm/aa" required>
               </div>
             </div>
           </div>
